First Swift Project - Hello World

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 .DS_Store
+Intro_Swift_Learning/Hello_Swift.playground/contents.xcplayground
+Intro_Swift_Learning/Hello_Swift.playground/playground.xcworkspace/xcuserdata/karkinh.xcuserdatad/UserInterfaceState.xcuserstate
+Intro_Swift_Learning/Hello_Swift.playground/xcuserdata/karkinh.xcuserdatad/xcschemes/xcschememanagement.plist
+Intro_Swift_Learning/Hello_Swift.playground/timeline.xctimeline
+Intro_Swift_Learning/Hello_Swift.playground/playground.xcworkspace/contents.xcworkspacedata
+.DS_Store
+.DS_Store
+.DS_Store
